--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <button id="dog" type="button" class="btn btn-success">Dogs</button>
       <button id="cat" type="button" class="btn btn-info">Cats</button>
       <button id="dino" type="button" class="btn btn-warning">Dinos</button>
+      <button id="unfilter" class="btn btn-default" type="submit">Unfilter Results</button>
     </div>
     <div id="petHolder"></div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.js" integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA=" crossorigin="anonymous"></script>
