--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
     <link rel="stylesheet" href="/styles/main.css">
     <title>Adoption Website</title>
   </head>
   <body>
-    <h1>Adopt a Pet</h1>
+    <div class="paw-container">
+      <img src="img/paws.png">
+    </div>
+    <h1>Adopt a Pet!</h1>
     <div class="buttons">
       <button id="dog" type="button" class="btn btn-success">Dogs</button>
       <button id="cat" type="button" class="btn btn-info">Cats</button>
